2006-05-28  Alex Roitman  <shura@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.save): Typo.
	* src/plugins/Verify.py: Add double-clicking and mark/unmark/invert.

2006-05-28  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/OpenOfficeDoc.py: Allow large cells to span pages (bug 0000165)
	* src/BaseDoc.py: Add key to write_text.
	* src/docgen/*: Add key to write_text.
	* src/PluginUtils/_ReportUtils.py: Add get_name_key.
	* src/plugins/FamilyGroup.py: insert name keys for indexing.

2006-05-27  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: More updates.
	* src/docgen/LPRDoc.py: Typo.

2006-05-27  Brian Matherly  <brian@gramps-project.org>
	* src/gramps.py: Add provisions for local mo files for Windows

2006-05-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/IndivComplete.py: Add event notes.

2006-05-26  Alex Roitman  <shura@gramps-project.org>
	* src/BasicUtils.py (UpdateCallback.reset): Add method.
	* src/plugins/verify.glade: update interface.
	* src/plugins/Verify.py: More improvements. Still need to finish
	filtering and object editing on double click.
	(Verify.on_apply_clicked): Reset the progress.

2006-05-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: build skip list for SelectFamily
	so that a person cannot be his own parent
	* src/Editors/_EditFamily.py: don't allow a person to be his own parent
	* src/Selectors/_BaseSelector.py: Add skipping of handles
	* src/DisplayModels/_BaseModel.py: Add skipping of handles
	* src/DisplayModels/_MediaModel.py: Add skipping of handles
	* src/DisplayModels/_RepositoryModel.py: Add skipping of handles
	* src/DisplayModels/_SourceModel.py: Add skipping of handles
	* src/DisplayModels/_EventModel.py: Add skipping of handles
	* src/DisplayModels/_FamilyModel.py: Add skipping of handles
	* src/DisplayModels/_PlaceModel.py: Add skipping of handles

2006-05-25  Don Allingham  <don@gramps-project.org>